--- a/site/themes/hugo-creative-portfolio-theme/exampleSite/config.toml
+++ b/site/themes/hugo-creative-portfolio-theme/exampleSite/config.toml
@@ -1,15 +1,8 @@
-baseurl = "https://edgars.dev"
-languageCode = "en-us"
-languageLang = "en"
-title = "edgars.dev"
+baseurl = "https://example.org/"
+title = "Creative portfolio"
 theme = "hugo-creative-portfolio-theme"
-
-
-# RSS, categories and tags disabled for an easy start
-# See configuration options for more details:
-# https://gohugo.io/getting-started/configuration/#toml-configuration
-disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
-
+languageCode = "en-us"
+# Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = ""
