--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ googleAnalytics = ""
      # - send a dummy email yourself to confirm your account
      # - click the confirm link in the email from www.formspree.io
      # - you're done. Happy mailing!
-  email = "you@yoursite.com"
+  email = "hello@edgars.dev"
 
     # Optional Matomo analytics (formerly piwik)
       # [params.analytics.matomo]
@@ -42,7 +42,7 @@ googleAnalytics = ""
   # Nav links in the side bar
   [[params.navlinks]]
   name = "Home"
-  url = "portfolio/"
+  url = "/"
   home = true
 
   [[params.navlinks]]
