--- a/site/config.toml
+++ b/site/config.toml
@@ -42,7 +42,7 @@ googleAnalytics = ""
   # Nav links in the side bar
   [[params.navlinks]]
   name = "Home"
-  url = "portfolio/"
+  url = "/"
   home = true
 
   [[params.navlinks]]
