--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -10,10 +10,9 @@ collections: # A list of collections the CMS should be able to edit
     folder: "site/content/portfolio" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
-      - {label: "Settings", name: settings, widget: object, fields: [
-          {label: "Draft", name: "draft", widget: "boolean", default: true},
-          {label: "Show only image", name: "showonlyimage", widget: "boolean", default: false}]}
-      - {label: "Weight", name: "weight", widget: "number"}
+      - {label: "Draft", name: "draft", widget: "boolean", default: true}
+      - {label: "Show only image", name: "showonlyimage", widget: "boolean", default: false}
+      - {label: "Weight", name: "weight", widget: "number", default: 1}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Image", name: "image", widget: "image", required: false}
