Another test update

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -6,16 +6,16 @@ public_folder: "img/portfolio"
 
 collections: # A list of collections the CMS should be able to edit
   - name: "portfolio" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Portfolio" # Used in the UI, ie.: "New Post"
+    label: "Article" # Used in the UI, ie.: "New Post"
     folder: "site/content/portfolio" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
-      - {label: "Draft", name: "draft", widget: "boolean", default: true}
-      - {label: "Show only image", name: "showonlyimage", widget: "boolean", default: false}
-      - {label: "Weight", name: "weight", widget: "number", default: 1}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "Draft", name: "draft", widget: "boolean", default: true}
+      - {label: "Show only image", name: "showonlyimage", widget: "boolean", default: false}
+      - {label: "Weight", name: "weight", widget: "number", default: 1}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "pages"
     label: "Pages"
