--- a/site/config.toml
+++ b/site/config.toml
@@ -46,6 +46,10 @@ googleAnalytics = ""
   home = true
 
   [[params.navlinks]]
+  name = "Notes"
+  url = "notes/"
+
+  [[params.navlinks]]
   name = "About"
   url = "about/"
 
