--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -25,6 +25,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Draft?", name: "draft", widget: "boolean", required: false}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "Weight", name: "weight", widget: "number", valueType: "int"}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "pages"
     label: "Pages"
