--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -24,6 +24,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Show only image?", name: "showonlyimage", widget: "boolean", required: false}
       - {label: "Draft?", name: "draft", widget: "boolean", required: false}
       - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {lable: "Tags", name: "tags", widget: "list", allow_add: true}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Weight", name: "weight", widget: "number", valueType: "int"}
       - {label: "Body", name: "body", widget: "markdown"}
