--- a/site/config.toml
+++ b/site/config.toml
@@ -61,7 +61,7 @@ googleAnalytics = "G-8MNJXCBPFP"
   linkedin      = "https://linkedin.com/in/edgars-grava-002b461a2"
   github        = "https://github.com/edgars-dev"
   youtube       = "https://www.youtube.com/channel/UC6sWH3ozHhC-jLR-7spRtuA"
-  telegram      = "full profile url in telegram"
+  telegram      = "/"
 
 [markup]
   [markup.goldmark]
@@ -76,10 +76,6 @@ googleAnalytics = "G-8MNJXCBPFP"
 
   [[module.mounts]]
     source = "themes/hugo-creative-portfolio-theme/site/static"
-    target = "static"
-
-  [[module.mounts]]
-    source = "static"
     target = "static"
 
   [[module.mounts]]
