--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "imagesloaded": "^4.1.4",
+    "jquery": "^3.5.1",
+    "masonry-layout": "^4.2.2",
     "photo-sphere-viewer": "^4.0.2"
   }
 }
